<resources>
    <string name="app_name">AppInfoPro</string>

    <string name="other">Other</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>
    <string name="close">close</string>
    <string name="setting">Setting</string>
    <string name="open_app">open app</string>
    <string name="uninstall">uninstall</string>
    <string name="install_app">install app</string>
    <string name="delete_apk_file">delete apk</string>
    <string name="app_market">App Market</string>
    <string name="goto_app_market">goto app market</string>
    <string name="app_details_setting">app settings details</string>
    <string name="goto_app_details_setting">goto app settings details</string>
    <string name="notfound">There\'s nothing here~~~</string>
    <string name="clickReturn">Click To Return</string>
    <string name="reset_dfsetting">Reset settings</string>
    <string name="reset_dfsetting_tips">restore the application default settings</string>
    <string name="scan_apk">scanning apk</string>
    <string name="scan_apk_tips">set scan apk file, the suffix field</string>
    <string name="setting_scan_suffix_suc">set suc, If need to be re scanned, Please click refresh</string>
    <string name="set_query_apk_suffix">set query suffix</string>
    <string name="set_query_apk_suffix_hint">set query suffix(No need to add .)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="application_sort">Application sort</string>
    <string name="get_apps_tips">get apps list</string>
    <string name="query_file_tips">scanning file</string>
    <string name="app_tips">Phone、App Info List, And support export、copy share...</string>

    <string name="user_apps">My Apps</string>
    <string name="system_apps">System Apps</string>
    <string name="phone_info">Phone Info</string>
    <string name="screen_info">Screen Info</string>
    <string name="query_apk">scanning apk</string>
    <string name="get_appinfo_fail">Get app info fail</string>
    <string name="get_apkinfo_fail">Get apk info fail</string>
    <string name="input_packname_aname_query">input pack/app name query</string>
    <string name="search_noresult_tips">Not found and %s related results</string>

    <string name="empty"></string>
    <string name="copy_suc">copy suc</string>
    <string name="export_suc">export suc</string>
    <string name="export_fail">export fail</string>
    <string name="share_fail">share fail</string>
    <string name="export_ing">exporting</string>
    <string name="operate_fail">operate fail</string>
    <string name="export_app_msg">export app info</string>
    <string name="export_apk_msg">export apk info</string>
    <string name="export_app">export app</string>
    <string name="share">share</string>
    <string name="refresh">refresh</string>
    <string name="file_not_exist">file not exist</string>
    <string name="delete_suc">delete suc</string>
    <string name="reset_desetting_suc">reset df setting suc</string>
    <string name="install_fail">install fail</string>
    <string name="install_request_tips">Please select application and allow installation permission.</string>

    <string name="model">Phone model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="brand">Brand</string>
    <string name="version_release">Android release</string>
    <string name="screen">Screen inch</string>
    <string name="screen_size">Screen size</string>
    <string name="sdcard_total">SDCard total</string>
    <string name="sdcard_available">SDCard available</string>
    <string name="memory_total">Memory total</string>
    <string name="memory_available">Memory available</string>
    <string name="display">Device display</string>
    <string name="id">Device ID</string>
    <string name="device">Device</string>
    <string name="baseband_version">Baseband version</string>
    <string name="linuxcode_version">LinuxCode version</string>
    <string name="cpuinfo">CPUInfo</string>
    <string name="cpu_abi1">CPU ABI1</string>
    <string name="cpu_abi2">CPU ABI2</string>
    <string name="cpu_max">CPU Max Freq</string>
    <string name="cpu_min">CPU Min Freq</string>
    <string name="cpu_cur">CPU Cur Freq</string>
    <string name="cpu_number">CPU Number</string>
    <string name="serial">Serial</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="board">Board</string>
    <string name="hardware">Hardware</string>
    <string name="product">Product</string>
    <string name="is_emulator">IS Emulator</string>
    <string name="is_debuggable">IS Debuggable</string>
    <string name="supported_abis">Supported abis</string>

    <string name="height_pixels">Height Pixels</string>
    <string name="width_pixels">Width Pixels</string>
    <string name="xdpi">X Dpi</string>
    <string name="ydpi">Y Dpi</string>
    <string name="density">Density</string>
    <string name="density_dpi">Density Dpi</string>
    <string name="scaled_density">Scaled Density</string>
    <string name="height_dpi">Height Dpi</string>
    <string name="width_dpi">Width Dpi</string>
    <string name="convert_dpi">Convert Dpi</string>

    <string name="dev_str_to">to</string>

    <string name="dev_str_packname">App Pack name</string>
    <string name="dev_str_md5">App md5 signatures</string>
    <string name="dev_str_version_code">App version code</string>
    <string name="dev_str_version_name">App version name</string>
    <string name="dev_str_apk_uri">Apk file path</string>
    <string name="dev_str_sha1">SHA1</string>
    <string name="dev_str_sha256">SHA256</string>
    <string name="dev_str_first_install_time">First install time</string>
    <string name="dev_str_last_update_time">Last update time</string>
    <string name="dev_str_minsdkversion">MinSdkVersion</string>
    <string name="dev_str_targetsdkversion">TargetSdkVersion</string>
    <string name="dev_str_apk_length">Apk length</string>
    <string name="dev_str_effective">Effective time</string>
    <string name="dev_str_iseffective">Signature whether expire</string>
    <string name="dev_str_overdue">Expired</string>
    <string name="dev_str_notoverdue">Not expired</string>
    <string name="dev_str_principal">Certificate publisher</string>
    <string name="dev_str_version">Certificate number</string>
    <string name="dev_str_sigalgname">Certificate algorithm name</string>
    <string name="dev_str_sigalgoid">Certificate algorithm OID</string>
    <string name="dev_str_dercode">Certificate DER code</string>
    <string name="dev_str_serialnumber">Certificate UUID</string>

</resources>
