<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fadingEdge="none"
    android:fitsSystemWindows="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <!-- 设置功能分割Title -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.0dip"
            android:layout_marginLeft="18.0dip"
            android:layout_marginTop="15.0dip"
            android:text="@string/setting"
            android:textColor="@color/color359AFF"
            android:textSize="15.0sp" />

        <LinearLayout
            android:id="@+id/fs_appsort_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg_selector"
            android:orientation="vertical"
            android:paddingBottom="15.0dip"
            android:paddingLeft="18.0dip"
            android:paddingTop="15.0dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/application_sort"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <TextView
                android:id="@+id/fs_appsort_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.0dip"
                android:textColor="@color/color808080"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fs_scanapk_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg_selector"
            android:orientation="vertical"
            android:paddingBottom="15.0dip"
            android:paddingLeft="18.0dip"
            android:paddingTop="15.0dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_apk"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.0dip"
                android:text="@string/scan_apk_tips"
                android:textColor="@color/color808080"
                android:textSize="15.0sp" />
        </LinearLayout>

        <!-- 其他功能分割Title -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.0dip"
            android:layout_marginLeft="18.0dip"
            android:layout_marginTop="15.0dip"
            android:text="@string/other"
            android:textColor="@color/color359AFF"
            android:textSize="15.0sp" />


        <LinearLayout
            android:id="@+id/fs_reset_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg_selector"
            android:orientation="vertical"
            android:paddingBottom="15.0dip"
            android:paddingLeft="18.0dip"
            android:paddingTop="15.0dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_dfsetting"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.0dip"
                android:text="@string/reset_dfsetting_tips"
                android:textColor="@color/color808080"
                android:textSize="15.0sp" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>