<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300.0dip"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_app_sort_bg"
        android:orientation="vertical"
        android:padding="15.0dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:text="@string/set_query_apk_suffix"
            android:textColor="@android:color/black"
            android:textSize="18.0sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.0dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:text="xxx."
                android:textColor="@android:color/black"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/dqse_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:hint="@string/set_query_apk_suffix_hint"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="14.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dqs_add_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5.0dip"
                android:paddingBottom="5.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="15.0dip"
                android:paddingTop="8.0dip"
                android:text="@string/add"
                android:textColor="@android:color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/dqs_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5.0dip"
                android:paddingBottom="5.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="15.0dip"
                android:paddingTop="8.0dip"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="14.0sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>